--- a/plugin.xml
+++ b/plugin.xml
@@ -102,6 +102,9 @@ id="org.apache.cordova.media"
          </config-file>
          <header-file src="src/ios/CDVSound.h" />
          <source-file src="src/ios/CDVSound.m" />
+
+      <framework src="AudioToolbox.framework" />
+
      </platform>
 
     <!-- blackberry10 -->
