--- a/plugin.xml
+++ b/plugin.xml
@@ -56,7 +56,7 @@ id="org.apache.cordova.media"
         </config-file>
         
         <source-file src="src/android/AudioHandler.java" target-dir="src/org/apache/cordova/media" />
-        <source-file src="src/android/AudioPlayer.java" target-dir="src/org/apache/cordova/media" />
+        <source-file src="src/android/ExtAudioRecorder.java" target-dir="src/org/apache/cordova/media" />
         <source-file src="src/android/FileHelper.java" target-dir="src/org/apache/cordova/media" />
      </platform>
      
